<resources>
    <string name="app_name">Криптовалюты</string>
    <string name="currency_list">Список криптовалют</string>
    <string name="usd">USD</string>
    <string name="rub">RUB</string>
    <string name="coin_icon">coin icon</string>
    <string name="error_message">Произошла какая-то ошибка :(\nПопробуем снова?</string>
    <string name="try_again">попробовать</string>
    <string name="currency_logo">currency logo</string>
    <string name="description_title">Описание</string>
    <string name="description">Bitcoin is the first successful internet money based on peer-to-peer technology; whereby no central bank or authority is involved in the transaction and production of the Bitcoin currency. It was created by an anonymous individual/group under the name, Satoshi Nakamoto. The source code is available publicly as an open source project, anybody can look at it and be part of the developmental process.

                                                                                                    Bitcoin is changing the way we see money as we speak. The idea was to produce a means of exchange, independent of any central authority, that could be transferred electronically in a secure, verifiable and immutable way. It is a decentralized peer-to-peer internet currency making mobile payment easy, very low transaction fees, protects your identity, and it works anywhere all the time with no central authority and banks.</string>
    <string name="categories_title">Категории</string>
    <string name="categories">Cryptocurrency, Layer 1 (L1), FTX Holdings, Proof of Work (PoW), GMCI 30 Index</string>
    <string name="coin_price_dollar">$ %s</string>
    <string name="coin_price_ruble">₽ %s</string>
    <string name="price_increase">+ %.2f%%</string>
    <string name="coin_decrease">- %.2f%%</string>
    <string name="download_error">Произошла ошибка при загрузке</string>
</resources>