<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CurrencyListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/currency_list"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                app:checkedChip="@id/chipUsd"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipUsd"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:minHeight="51dp"
                    android:text="@string/usd"
                    android:textColor="@color/chip_text_color"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/chip_background_color"
                    app:chipCornerRadius="20dp"
                    app:chipEndPadding="26dp"
                    app:chipStartPadding="26dp"
                    app:rippleColor="@color/orange_light" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipRub"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:minHeight="51dp"
                    android:text="@string/rub"
                    android:textColor="@color/chip_text_color"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/chip_background_color"
                    app:chipCornerRadius="20dp"
                    app:chipEndPadding="26dp"
                    app:chipStartPadding="26dp"
                    app:rippleColor="@color/orange_light" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <LinearLayout
        android:id="@+id/llError"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/coin_icon"
            app:srcCompat="@drawable/bitcoin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_message"
            android:textSize="18sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/buttonTryAgain"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/try_again"
            app:backgroundTint="@color/orange"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>